...
                            if success {
                                isUnlocked = true
                            }
                        }
                    }) {
                        HStack {
                            Image(systemName: biometricManager.getBiometricType() == "Face ID" ? "faceid" : "touchid")
                                .font(.title)
                            Text("Use \(biometricManager.getBiometricType())")
                        }
                        .foregroundColor(.green)
                        .padding()
                        .frame(maxWidth: .infinity)
...
                        }
                    }
                } else {
                    // Display error if passcode length is invalid
                }
            }) {
                Text("Unlock")
                    .fontWeight(.bold)
//                    .foregroundColor(.green)
            }
            // Disable button if passcode length is not 8 digits
            .disabled(!(passcode.count == 8)))
            
...
