...
    // MARK: - QR Code button
    private var qrCodeButton: some View {
        Button(action: {
            presentingSheet = .addByScanning
            isSheetPresented = true
        }) {
            Image(systemName: "qrcode")
        }
        .accessibilityIdentifier("qrCodeButton")
        .accessibilityLabel("Scan QR Code")
    }
    
    // MARK: - Manual Entry button
...
